--- a/web/templates/search_venues.html
+++ b/web/templates/search_venues.html
@@ -12,7 +12,7 @@
             <div class="col-sm-10">
                 <select id="in_name" class="form-control" name="in_name">
                     <option value="2010_only_journals" selected>Only journals from 2010</option>
-                    <!-- <option value="2010_cut0.2">Cut 20% of small conferences and journals from 2010</option> -->
+                    <option value="2010_cut0.2">Cut 20% of small conferences and journals from 2010</option>
                 </select>
             </div>
         </div>
