--- a/web/templates/search_venues.html
+++ b/web/templates/search_venues.html
@@ -13,6 +13,7 @@
                 <select id="in_name" class="form-control" name="in_name">
                     <option value="2010_only_journals" selected>Only journals from 2010</option>
                     <option value="2010_cut0.2">Cut 20% of small conferences and journals from 2010</option>
+                    <option value="-">None</option>
                 </select>
             </div>
         </div>
@@ -30,7 +31,7 @@
         <div class="form-group row">
             <label for="venues" class="col-sm-2 col-form-label">Venues</label>
             <div class="col-sm-10">
-                <input class="form-control mr-sm-2" id="venues" type="text" name="list" placeholder="Venues" aria-label="Venue">
+                <input class="form-control mr-sm-2" id="venues" type="text" name="list" placeholder="Ex.: ml aai jmlr" aria-label="Venue">
             </div>
         </div>
 
