--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -26,7 +26,7 @@
                         <a class="dropdown-item" href="frequency#">Name frequency</a>
                         <a class="dropdown-item" href="graph#">Show 2D graph</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="search#">Search another venues</a>
+                        <a class="dropdown-item" href="search#">Search for other venues</a>
                     </div>
                 </li>
                 </ul>
