--- a/web/templates/show_venues.html
+++ b/web/templates/show_venues.html
@@ -2,6 +2,14 @@
 {% block title %}Venues{% endblock %}
 {% block content %}
     <div class="jumbotron">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for msg in messages %}
+                    <p style="color:red"><b>{{msg}}</b></p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
         <h1>Venues</h1>
 
         <hr class="my-4">
