--- a/web/templates/search_venues.html
+++ b/web/templates/search_venues.html
@@ -20,8 +20,8 @@
             <div class="col-sm-10">
                 <select id="in_name" class="form-control" name="in_name">
                     <option value="2010_only_journals">Only journals from 2010</option>
-                    <!-- <option value="2010_cut0.2">Cut 20% of small conferences and journals from 2010</option>
-                    <option value="-">None</option> -->
+                    <option value="2010_cut0.2">Cut 20% of small conferences and journals from 2010</option>
+                    <option value="-">None</option>
                 </select>
             </div>
         </div>
