novo most frequent words/mean no lugar de union

--- a/web/templates/search_venues.html
+++ b/web/templates/search_venues.html
@@ -21,6 +21,9 @@
                 <select id="in_name" class="form-control" name="in_name">
                     <option value="2010_only_journals">Only journals from 2010</option>
                     <option value="2010_cut0.2">Cut 20% of small conferences and journals from 2010</option>
+                    <option value="2010">Only publications from 2010</option>
+                    <option value="cut0.2">Cut 20% of small conferences</option>
+                    <option value="only_journals">Only journals</option>
                     <option value="-">None</option>
                 </select>
             </div>
